<resources>
    <string name="app_name">Loyalty</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_customer_title">Welcome !  \n You are a customer ?</string>
    <string name="hello_company_title">Welcome ! \n You are a company ?</string>
    <string name="material_button_register">Register</string>
    <string name="material_button_login">Login</string>
    <string name="title_activity_login">Sign in</string>

    <string name="API_KEY_GOOGLE_PLACE">AIzaSyDciTjFfkGtSvX2i2E2OrM5-WNGlKO0bEs	</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="type_password">Password</string>
    <string name="retype_password">Retype the password</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="preference_file_key">preference_file_key</string>
    <string name="person_or_company">person_or_company</string>
    <string name="title_activity_register_or_login">Login</string>
    <string name="username">username</string>
    <string name="prompt_password_retype">Retype password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="age">Age</string>
    <string name="select_sexe">Sexe</string>
    <string name="prompt_telephone">Telephone</string>
    <string name="login_or_register">login_or_register</string>


    <string name="token">token</string>
    <string name="error_message">error_message</string>
    <string name="error_code">error_code</string>
    <string name="adress_label">Enter your adress</string>
    <string name="birthdate">Birth Date</string>


    <!--IMPORTANT STRING DO NOT TOUCH IT -->
    <string name="url_api">http://localhost:3000/</string>
    <string name="personId_data_label">personId</string>
    <string name="companyId_data_label">companyId</string>
    <string name="email_data_label">email</string>
    <string name="password_data_label">password</string>
    <string name="telephone_data_label">telephone</string>
    <string name="firstname_data_label">firstname</string>
    <string name="lastname_data_label">lastname</string>
    <string name="sex_data_label">sex</string>
    <string name="birthdate_data_label">birthDate</string>
    <string name="streetNumber_data_label">streetNumber</string>
    <string name="route_data_label">route</string>
    <string name="zipCode_data_label">zipCode</string>
    <string name="city_data_label">city</string>
    <string name="country_data_label">country</string>
    <string name="QRtoken">QRToken</string>
    <string name="cancel_button">CANCEL</string>
    <string name="ok_button">OK</string>
    <string name="dialog_title_reset_password">Forgotten password ?</string>
    <string name="dialog_message_reset_password">Don\'t worry ! You can reset your password, just enter your email below</string>

    <string name="dialog_title_succes">Oh yeah !</string>
    <string name="dialog_message_succes_account_created">Your account is created, now go check your mails to verify your account.</string>
    <string name="dialog_title_error">Oops !</string>
    <string name="dialog_message_error_account_not_verified">Your email seem not te be verified ... Send verification ?</string>
    <string name="dialog_message_error_account_do_not_exist">This account do not exist :( ...</string>
    <string name="dialog_message_error_password_invalid_for_this_account">The password is incorrect !</string>
    <string name="dialog_message_error_unable_to_verify_account">Unable to verify the account</string>
    <string name="webSiteCompleteURL">callBack</string>

</resources>
